[package]
name = "as-if-std"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"
publish = false

[lib]
test = false
doc = false
doctest = false
bench = false

[dependencies]
cfg-if = "1.0"
rustc-demangle = "0.1.21"

[target.'cfg(not(any(target_env = "msvc", target_vendor = "uwp")))'.dependencies]
libc = { version = "0.2.146", default-features = false }
addr2line = { version = "0.22.0", optional = true, default-features = false }

[target.'cfg(not(windows))'.dependencies]
miniz_oxide = { version = "0.7.0", optional = true, default-features = false }

[target.'cfg(not(any(windows, target_os = "illumos")))'.dependencies]
zstd = { version = "= 0.13.0", optional = true, default-features = false }

[target.'cfg(not(any(target_env = "msvc", target_vendor = "uwp")))'.dependencies.object]
version = "0.35.0"
default-features = false
optional = true
features = ['read_core', 'elf', 'macho', 'pe', 'xcoff', 'unaligned', 'archive']

[build-dependencies]
# Dependency of the `backtrace` crate
cc = "1.0.90"

[features]
default = ['backtrace']
backtrace = ['addr2line', 'miniz_oxide', 'object', 'zstd']
std = []

[lints.rust]
unexpected_cfgs = "allow"
