[package]
name = "cpp_smoke_test"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
backtrace = { path = "../..", features = ["cpp_demangle"] }
[patch.crates-io]
gimli = { git = "https://github.com/jyn514/gimli", branch = "shared-attrs", version = "0.31.1" }
