[package]
name = "without_debuginfo"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"

[dependencies.backtrace]
path = "../.."
default-features = false
features = ['std']

[profile.dev]
debug = false
strip = "debuginfo"

[profile.test]
debug = false
strip = "debuginfo"

[features]
libbacktrace = ['backtrace/libbacktrace']
gimli-symbolize = ['backtrace/gimli-symbolize']
