[package]
name = "without_debuginfo"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"

[dependencies.backtrace]
path = "../.."
default-features = false
features = ['std']

[profile.dev]
debug = false

[profile.test]
debug = false
[patch.crates-io]
gimli = { git = "https://github.com/jyn514/gimli", branch = "shared-attrs", version = "0.31.1" }
